2008-08-22  Jorge Gonzalez  <jorgegonz@svn.gnome.org>

	* es/es.po: Updated Spanish translation

2008-08-22  Gerd Kohlberger  <gerdk@svn.gnome.org> 

	* C/mousetweaks.xml: Add short description needed by
	.omf.in template. Fixes make distcheck.
	* ChangeLog: Remove reference to launchpad repo.

2008-08-22  Jorge Gonzalez  <jorgegonz@svn.gnome.org>

	* es/es.po: Updated Spanish translation

2008-08-21 Francesco Fumanti <frfumanti@svn.gnome.org>

	* delete trunk/help/C/figures/mouse-a11y-add-applet-to-panel-window.png
	* modified trunk/help/C/mousetweaks.xml

	Deleted non distribution agnostic picture in manual.

2008-08-21 Francesco Fumanti <frfumanti@svn.gnome.org>

	* modified trunk/help/C/figures/mouse-a11y-dwell-click-type-applet.png
	* modified trunk/help/C/figures/mouse-a11y-ssc-delay-slider.png
	* modified trunk/help/C/figures/mouse-a11y-dwell-gesture-mapping.png
	* modified trunk/help/C/figures/mouse-a11y-pointer-capture-preferences.png
	* modified trunk/help/C/figures/mouse-a11y-dwell-mode-choice.png
	* modified trunk/help/C/figures/mouse-a11y-dwell-ctw-checkbox.png
	* modified trunk/help/C/figures/mouse-a11y-dwell-motion-treshold.png
	* modified trunk/help/C/mousetweaks.xml

	Update some figures and fix typo in the manual.

2008-08-12  Jorge Gonzalez  <jorgegonz@svn.gnome.org>  

	* es/es.po: Updated Spanish translation

2008-08-08  Jorge Gonzalez  <jorgegonz@svn.gnome.org>

	* es/es.po: Updated Spanish translation

2008-08-04  Jorge Gonzalez  <jorgegonz@svn.gnome.org>

	* es/es.po: Updated Spanish translation

2008-08-01 Francesco Fumanti <frfumanti@svn.gnome.org>

	* modified trunk/help/C/figures/mouse-a11y-dwell-click-type-applet.png

	Remove Ubuntu logo from figure with Dwell Click applet.

2008-05-25  Jorge Gonzalez  <jorgegonz@svn.gnome.org>

        * es/es.po: Updated Spanish translation

2008-07-21 Francesco Fumanti <frfumanti@svn.gnome.org>

	* modified trunk/help/C/mousetweaks.xml