@@ -1,3 +1,9 @@
+2008-08-25 Francesco Fumanti <frfumanti@svn.gnome.org>
+
+	* modified trunk/help/C/mousetweaks.xml
+
+	Fixed typo in the manual.
+
 2008-08-22  Jorge Gonzalez  <jorgegonz@svn.gnome.org>
 
 	* es/es.po: Updated Spanish translation
